alpha2.44 fix share with myself